--- a/pom.xml
+++ b/pom.xml
@@ -70,5 +70,10 @@
             <version>19.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+            <version>0.3m</version>
+        </dependency>
     </dependencies>
 </project>
